controller auth me
