# routes/api.php
@@ -32,7 +32,7 @@ Route::group([
     Route::get('users', 'UserController@index');
     Route::post('users/store', 'UserController@store');
     Route::get('users/{id}', 'UserController@show');
-    
+    Route::get('users/me', 'UserController@me');
     Route::put('users/{id}', 'UserController@update');
     Route::delete('users/{id}', 'UserController@destroy');
 });
